# Dioptas

./: .gitattributes  .gitignore  .travis.yml  Dioptas.spec  MANIFEST.in  README.md  Untitled0.ipynb  azure-pipelines.yml  build.py  changelog.md  changelog.rst  circle.yml  create_executable.bat  create_executable.sh  example_config.json  pyproject.toml  pytest.ini  requirements.txt  run.py  setup.cfg  setup.py  todolist
.github/workflows/: CD.yml  CI_backend.yml  CI_backend_windows.yml  CI_batch.yml  CI_frontend.yml  CI_functional.yml  build.yml  build_linux.yml  build_mac.yml  build_windows.yml  main.yml
Dioptas_main/: Dioptas.py  Dioptas.spec  Dioptas32.spec  DioptasLinux64.spec  DioptasWin32.spec  DioptasWin64.spec  Dioptas_loaded.py  calibrate.py  profile.sh  setup.py  setupWin64.py  setup_win_32.py
Dioptas_main/Controller/: CalibrationController.py  IntegrationBackgroundController.py  IntegrationController.py  IntegrationImageController.py  IntegrationOverlayController.py  IntegrationPhaseController.py  IntegrationSpectrumController.py  JcpdsEditorController.py  MainController.py  MaskController.py  __init__.py
Dioptas_main/Data/: CalibrationData.py  HelperModule.py  ImgCorrection.py  ImgData.py  MaskData.py  PhaseData.py  Spectrum.py  SpectrumData.py  __init__.py  cosmics.py  jcpds.py
Dioptas_main/Distribution/: Dioptas.spec  Dioptas32.spec
Dioptas_main/ExampleData/: Fe7C3_300_020.chi
Dioptas_main/Tests/: CalibrationControllerTest.py  ImgDataUnitTest.py  IntegrationFunctionalTest.py  JcpdsEditorFunctionalTest.py  JcpdsEditorUnitTest.py  JcpdsUnitTest.py  MaskControllerTest.py  OverlayControllerTest.py  PhaseControllerTest.py  test_CalibrationController.py  test_CalibrationData.py  test_CombinedData.py  test_Data.py  test_ImgCorrections.py  test_ImgData.py  test_IntegrationBackgroundController.py  test_JcpdsUnit.py  test_Mask.py  test_MaskController.py  test_MaskData.py  test_OverlayController.py  test_PhaseController.py  test_Spectrum.py  test_SpectrumData.py  test_background_extraction.py  test_functionalIntegration.py  test_functional_JcpdsEditor.py
Dioptas_main/UiFiles/: Calibration.ui  CalibrationUI.py  Integration.ui  IntegrationUI.py  Main.ui  MainUI.py  MaskUI.py
Dioptas_main/Views/: CalibrationView.py  ExLegendItem.py  HorHistogramLUTItem.py  ImgView.py  ImgWidget.py  IntegrationView.py  JcpdsEditorWidget.py  MainView.py  MaskView.py  SpectrumView.py  SpectrumWidget.py  __init__.py  stylesheet.css
Dioptas_main_Tests/: CalibrationControllerTest.py  CombinedDataTest.py  DataTest.py  OverlayControllerTest.py  PhaseControllerTest.py  SpectrumDataTest.py
Documentation/: Introduction.rst  calibration.rst  conf.py  index.rst  integration.rst  mask.rst
PDX main/: Py2DeX.py  Py2DeX_loaded.py  Py2Dex.py  XRS.py  XRS_loaded.py  calibrate.py  profile.sh
PDX main Tests/: CalibrationControllerTest.py  CalibrationDataTest.py  OverlayControllerTest.py  PhaseControllerTest.py
PDX main/Controller/: CalibrationController.py  ImageController.py  IntegrationController.py  IntegrationImageController.py  IntegrationOverlayController.py  IntegrationPhaseController.py  IntegrationSpectrumController.py  MainController.py  MaskController.py  OverlayController.py  PhaseController.py  SpectrumController.py
PDX main/Data/: CalibrationData.py  HelperModule.py  ImgData.py  MaskData.py  PhaseData.py  SpectrumData.py  marchingsquares.py
PDX main/Tools/: marchingsquares.py  marchingsquares_.c  marchingsquares_.pyx
PDX main/UiFiles/: Calibration.ui  CalibrationUI.py  Integration.ui  IntegrationUI.py  Main.ui  MainUI.py  Mask.ui  MaskUI.py  convertUiFiles.py
PDX main/Views/: CalibrationView.py  ExLegendItem.py  HorHistogramLUTItem.py  ImgView.py  IntegrationView.py  MainView.py  MaskView.py  SpectrumView.py  __init__.py
Snippets/: find_pixel_in_circle.txt
Testing/: __init__.py  run_pyqt_examples.py
Testing/DrawingTest/: mod.c  mod.pyx  run.py  run_single.py  setup.py  sklearn_implementation.py
Testing/PyQtGraphTest/: PyQtGraphTest.ui  PyQtGraphTestController.py  PyQtGraphTestView.py  PyQtGraphTest_UI.py  convert_ui_files.py  test.py
Testing/SkimageTest/: Polygon Drawing.ipynb
Testing/X-ray Suite Test/: test.p  test_calibration.py  test_pyFAI.py
Testing/X-ray SuiteTry/: DataTest.py  ImageCalibration.py  XRS_Data.py  XRS_MainController.py  convert_ui_files.py  test.p  utilities.py
Testing/pyFAITest/: blob_detection.py
Testing/pyqtgraph in tab/: ConvertUI.py  main.py
Testing/pyqtgraph_rgba_plot/: main.py  widget.ui  widgetUI.py
X-ray Suite/: DataTest.py  ImageCalibration.py  XRS_Data.py  XRS_MainController.py  convert_ui_files.py  test.p  utilities.py
X-ray Suite/spyder_tests/: ellipse_detection.py  img_filters.py  optimize_parameter.py  optimize_parameter_with_initial_guess.py  plot_image_and_ring.py  test.py  test2.py  testing_image_integration.py
X-ray Suite/ui_files/: XRS_Main.py  XRS_Main.ui
X-ray Suite/views/: XRS_MainView.py
XRS main/: XRS.py  XRS_loaded.py  calibrate.py
XRS main Tests/: CombineDataTest.py  CombinedDataTest.py  DataTest.py  SpectrumDataTest.py  XrsDataTest.py
XRS main/Controller/: CalibrationController.py  IntegrationController.py  MainController.py  MaskController.py  XrsCalibrationController.py  XrsIntegrationController.py  XrsMainController.py  XrsMaskController.py
XRS main/Data/: CalibrationData.py  HelperClasses.py  HelperModule.py  ImgData.py  MaskData.py  SpectrumData.py  XrsCalibrationData.py  XrsData.py  XrsHelper.py  XrsImgData.py  XrsMaskData.py  __init__.py  cosmics.py  distinguishable_colors.txt
XRS main/UiFiles/: Calibration.ui  (+16 more)
conda_scripts/: construct.yaml  post_install_unix.sh  post_install_windows.bat
dioptas/: Dioptas.py  Dioptas.spec  __init__.py  _desktop_shortcuts.py  _version.py  excepthook.py  fileinfo_test.py  paths.py  version.py
docs/: Introduction.rst  Makefile  calibration.rst  conf.py  make.bat
scripts/: dioptas  dioptas.py  dioptas_batch  dioptas_batch.py  dropbox_upload.py
source/: Dioptas.py
(+741 files in other folders)
