[tool.poetry]
name = "dioptas"
version = "0.0.0" # Will be overwritten by poetry-dynamic-versioning
description = "GUI program for reduction and exploration of 2D X-ray diffraction data"
authors = ["Clemens Prescher <clemens.prescher@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

classifiers = [
    'Intended Audience :: Science/Research',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Physics',
    'Topic :: Scientific/Engineering :: Chemistry',
    'Topic :: Scientific/Engineering :: Visualization',
    'Topic :: Scientific/Engineering :: Information Analysis',
]

include = ["dioptas/model/util/*.pyd"]  # Compiled extensions
exclude = ["dioptas/tests/*"] # Exclude tests from package

[tool.poetry.build]
script = "build.py"
generate-setup-file = false

[tool.poetry.scripts]
dioptas = "dioptas:main"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "default-unprefixed"
style = "semver"

[tool.poetry-dynamic-versioning.substitution]
files = ["dioptas/__init__.py"]


[tool.poetry.dependencies]
python = "^3.8"
EXtra-data = "^1.13.0"
future = "^0.18.3"
h5py = "^3.9.0"
hdf5plugin = "^4.1.3"
lmfit = "^1.2.1"
pandas = "^2.0.2"
psutil = "^5.9.5"
PyCifRW = "^4.4.5"
PyQt6 = "^6.5.1"
pyfai = "^2023.5.0"
pyqtgraph = "^0.13.3"
QtPy = "^2.3.1"
scikit-image = "^0.21.0"
sharedmem = "^0.3.8"
watchdog = "^3.0.0"
pyopengl = "^3.1.7"
pyopengl-accelerate = "^3.1.7"

[tool.poetry.dev-dependencies]
cython = "^0.29.35"

[tool.poetry.group.test.dependencies]
pytest = "^6.2.5"
pytest-qt = "*"

[build-system]
requires = ["poetry-core", "cython", "setuptools", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
