[tool.poetry]
name = "dioptas"
version = "0.6.1" # Will be overwritten by poetry-dynamic-versioning
description = "GUI program for reduction and exploration of 2D X-ray diffraction data"
authors = ["Clemens Prescher <clemens.prescher@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

classifiers = [
    'Intended Audience :: Science/Research',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Physics',
    'Topic :: Scientific/Engineering :: Chemistry',
    'Topic :: Scientific/Engineering :: Visualization',
    'Topic :: Scientific/Engineering :: Information Analysis',
]

exclude = ["dioptas/tests/*"] # Exclude tests from package

[tool.poetry.scripts]
dioptas = "dioptas:main"

[tool.poetry-dynamic-versioning]
enable = false
vcs = "git"
pattern = "default-unprefixed"
style = "semver"

[tool.poetry-dynamic-versioning.substitution]
files = ["dioptas/__init__.py"]

[tool.poetry.dependencies]
python = "^3.9, <3.14"
EXtra-data = "^1.13.0"
h5py = "^3.13.0"
hdf5plugin = "^5.0.0"
lmfit = "^1.3.3"
pandas = [
  { version ="^2.1.1", python = ">3.9" },
  { version ="^1.3.3", python = "<3.9" }
  ]
psutil = "^5.9.5"
PyCifRW = "^5.0.0"
PyQt6 = "^6.8"
pyfai = "^2023.5.0"
pyqtgraph = "^0.13.7"
pyshortcuts = "^1.8.1"
QtPy = "^2.4.3"
scikit-image = [
  {version = "^0.21.0", python = "<3.9"},
  {version = "^0.22.0", python = ">=3.9"}
]
sharedmem = "^0.3.8"
watchdog = "^3.0.0"
pyopengl = "^3.1.7"
pyopengl-accelerate = "^3.1.7"
xypattern = "^1.2.2"
numpy = [
  { version = "^1.24.0", python = "<3.10" },
  { version = "^1.26.0", python = ">=3.10" }
]
scipy = [
  { version = "^1.9.3", python = "<3.10" },
  { version = "^1.11.3", python = ">=3.10" }
]
numexpr = "2.8.4"
qt-material = "^2.14"


[tool.poetry.group.test.dependencies]
pytest = "^6.2.5"
pytest-qt = "*"
mock = "^5.1.0"

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
