[metadata]
name = dioptas
description = GUI program for reduction and exploration of 2D X-ray diffraction data
long_description = file: README.md
long_description_content_type = text/markdown
author = Clemens Prescher
author_email = clemens.prescher@gmail.com
url = https://github.com/Dioptas/Dioptas
license = GPL-3.0
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
keywords = x-ray diffraction, synchrotron, high pressure, graphical user interface
project_urls =
    Source = https://github.com/dioptas/dioptas
    Changelog = https://github.com/Dioptas/Dioptas/blob/develop/changelog.rst
    Documentation = https://dioptas.readthedocs.io/en/stable/
    Tracker = https://github.com/Dioptas/Dioptas/issues

[options]
packages = find:
python_requires = >=3.7
setup_requires =
    setuptools_scm
    cython
install_requires =
    cython
    extra_data
    future
    h5py
    hdf5plugin
    lmfit
    pandas
    psutil
    pycifrw
    python-dateutil
    pyqt6
    pyfai>=2023.1.0
    pyqtgraph
    qtpy
    scikit-image
    sharedmem
    watchdog

[options.package_data]
dioptas =
    resources/style/*
    resources/calibrants/*
    resources/data/*
    resources/icons/*
    __version__

[options.entry_points]
console_scripts =
    dioptas = scripts:dioptas.main
    dioptas_batch = scripts:dioptas_batch.main


[coverage:run]
omit =
    _version.py
    dioptas/tests/*
